<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.playlist.AddPlaylistFragment"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/titleAddPlaylist"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/titlePlaylistName_AddPlaylist"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="20dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSaveAddPlaylist"
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/montserrat_bold"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/btnSave"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>