<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/titleHome"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat"
                android:text="Suggestion"
                android:textColor="@color/white"
                android:textSize="16dp"></TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                app:cardCornerRadius="10dp">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.smarteist.autoimageslider.SliderView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:text="@string/titleHomeCatogory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:itemCount="6" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textSize="16dp"
                android:text="@string/titleHomeSinger" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSinger"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>